examples/fail/lexer/unterminated_string.bina
// EXPECT_LEXER_ERROR: unterminated string
fn main() -> int {
    let s = "never closed;
    return 0;
}
